# ots_micr_arch

./: .pre-commit-config.yaml  Dockerfile  README.md  deployment.yml  ingress.yml  main.py  pyproject.toml  requirements.txt  service.yml  test_main.http
alembic/: env.py
alembic/versions/: 0f07ef284971_.py  c1246ffbe362_.py
api/: config.py  db.py
api/user/: models.py  router.py  schema.py  services.py  validator.py
k8s/code/: deployment.yaml  secret.yaml  service.yaml
k8s/ingress/: ingress.yaml
k8s/job/: migration.yaml  secret.yaml
k8s/postgres/: postgres-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
tests/: crud users.postman_collection.json
