[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Petruha <refloader@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2 = "^2.9.6"
email-validator = "^1.3.1"

[tool.black]
line-length = 120
target-version = ['py37']
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
